--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,3 +85,18 @@ services:
       KAFKA_CLUSTERS_0_NAME: local-cluster
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka1:19092,kafka2:19093,kafka3:19094
       DYNAMIC_CONFIG_ENABLED: "true"
+
+#  kafka-practicum-yandex:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    platform: linux/arm64
+#    environment:
+#      BOOTSTRAP_SERVERS: localhost:9092,localhost:9093,localhost:9094
+#    depends_on:
+#      - kafka1
+#      - kafka2
+#      - kafka3
+#    deploy:
+#      mode: replicated
+#      replicas: 2
