--- a/docker-compose-app.yml
+++ b/docker-compose-app.yml
@@ -15,6 +15,7 @@ services:
       - kafka-net
     environment:
       BOOTSTRAP_SERVERS: kafka1:19092,kafka2:19093,kafka3:19094
+      SCHEMA_REGISTRY_URL: http://schema-registry:8081
     deploy:
       mode: replicated
       replicas: 2
