--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,15 @@
 	<groupId>ru.valeripaw</groupId>
 	<artifactId>kafka</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>kafka</name>
+    <packaging>pom</packaging>
+    <name>kafka</name>
 
-	<properties>
+    <modules>
+        <module>module2</module>
+		<module>module1</module>
+	</modules>
+
+    <properties>
 		<java.version>21</java.version>
 	</properties>
 
@@ -66,37 +72,5 @@
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<annotationProcessorPaths>
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-							<version>1.18.42</version>
-						</path>
-					</annotationProcessorPaths>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<configuration>
-							<mainClass>ru.valeripaw.kafka.KafkaApplication</mainClass>
-						</configuration>
-						<goals>
-							<goal>repackage</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
 
 </project>
