--- a/module1/docker-compose-module1.yml
+++ b/module1/docker-compose-module1.yml
@@ -6,7 +6,7 @@ networks:
     name: kafka-cluster-network
 
 services:
-  kafka-practicum-yandex:
+  kafka-practicum-yandex-module1:
     build:
       context: .
       dockerfile: Dockerfile
