--- a/module1/pom.xml
+++ b/module1/pom.xml
@@ -4,16 +4,65 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>ru.valeripaw</groupId>
-        <artifactId>kafka</artifactId>
+        <groupId>ru.valeripaw.kafka</groupId>
+        <artifactId>modules-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>module1</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>21</java.version>
     </properties>
+
+    <!--    <repositories>-->
+    <!--        <repository>-->
+    <!--            <id>confluent</id>-->
+    <!--            <name>Confluent Maven Repository</name>-->
+    <!--            <url>https://packages.confluent.io/maven/</url>-->
+    <!--        </repository>-->
+    <!--        &lt;!&ndash; Other repositories if you have any &ndash;&gt;-->
+    <!--    </repositories>-->
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-docker-compose</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.42</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+        </dependency>
+        <!--<dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-schema-registry-client</artifactId>
+            <version>8.1.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-json-schema-serializer</artifactId>
+            <version>8.1.1</version>
+            <scope>compile</scope>
+        </dependency>-->
+    </dependencies>
 
     <build>
         <plugins>
@@ -36,7 +85,7 @@
                 <executions>
                     <execution>
                         <configuration>
-                            <mainClass>ru.valeripaw.kafka.KafkaApplication</mainClass>
+                            <mainClass>ru.valeripaw.kafka.ModuleOneApplication</mainClass>
                         </configuration>
                         <goals>
                             <goal>repackage</goal>
