--- a/docker-compose-module2.yml
+++ b/docker-compose-module2.yml
@@ -16,3 +16,5 @@ services:
     environment:
       BOOTSTRAP_SERVERS: kafka1:19092,kafka2:19093,kafka3:19094
       SCHEMA_REGISTRY_URL: http://schema-registry:8081
+    ports:
+      - "9193:9193"
